# mini_MediaInfo

./: .gitignore  CMakeLists.txt
MediaInfo/: File__Analyze.cpp  File__Analyze.h  File__Analyze_Buffer_MinimizeSize.cpp  File__Analyze_MinimizeSize.h  MediaInfo_Config.cpp  MediaInfo_Config.h  MediaInfo_Config_Automatic.cpp  MediaInfo_Inform.cpp  MediaInfo_Internal.cpp  Setup.h
MediaInfo/Audio/: File_Ac3.cpp
MediaInfo/Multiple/: File_Mk.cpp  File_Mpeg4.cpp  File_Mpeg4_Elements.cpp  File_MpegPs.cpp  File_MpegTs.cpp  File_Mpeg_Descriptors.cpp  File_Mpeg_Psi.cpp  File_Mxf.cpp  File__ReferenceFilesHelper.cpp
MediaInfo/Reader/: Reader_libcurl.cpp
MediaInfo/Text/: File_Teletext.cpp
MediaInfo/Video/: File_Av1.cpp  File_Avc.cpp  File_Avc.h  File_Hevc.cpp
zlib/: CMakeLists.txt  zlib.h
